# geneasm

./: .gitmodules  assembler.cpp  assembler.h  env-setup-notes.txt  graph.cpp  graph.h  logger.cpp  logger.h  main.cpp  makefile  readme.md  seqemb.h
.devcontainer/: Dockerfile.cpu  devcontainer.json
cloud/aws/: dashboard_stack.yaml  makefile
cxx/: CMakeLists.txt  assembler.fbs  benchmarks.cpp  seqemb.cpp  test.py
notebook/: swaemb.ipynb  swaemb.py
sagemaker/: estimator.py  readme.md
sagemaker/docker/: Dockerfile
